--- a/myprojects/templates/home.html
+++ b/myprojects/templates/home.html
@@ -9,13 +9,13 @@
 </head>
 
 <body>
-  <!-- Navigation Bar -->
+
+<!-- Navigation Bar -->
   <header class="hero1">
     <nav>
-        <div class="logo"></div>
+      <div></div>
       <ul class="nav-links">
         <li><a href="#about">About</a></li>
-        <li><a href="#projects">Projects</a></li>
         <li><a href="#contact">Contact</a></li>
         <li><a href="#blogs">Blogs</a></li>
       </ul>
@@ -24,7 +24,7 @@
 
   <!-- Hero Section -->
   <section class="hero">
-    <h2><span id="heading"> Hello, I'm Yuthila Banuka</span></h2>
+      <h2> <span id="span">Hello, I'm Yuthila Banuka</span></h2>
     <p>A passionate Web Developer & AI enthusiast </p>
     <button onclick="scrollToSection('projects')">View My Work</button>
   </section>
@@ -129,6 +129,14 @@
       </div>
     </div>
 
+      <div class="skill">
+        <p>C</p>
+        <div class="progress">
+          <div class="progress-bar" style="width: 50%;"></div>
+        </div>
+      </div>
+    </div>
+
     <!-- Right Column: Libraries & Frameworks -->
     <div class="skills-column">
       <h3>Libraries & Frameworks</h3>
@@ -177,7 +185,6 @@
   <section id="contact">
     <h2>Contact Me</h2>
     <p>Email: banukadeseram12@gmail.com</p>
-      <a href="https://www.instagram.com/_y_banuka_/" > <img src="/images/icons8-instagram-50.png"></a>
 
   </section>
 
