made the home and about

--- a/myprojects/templates/about.html
+++ b/myprojects/templates/about.html
@@ -1,10 +1,39 @@
 <!DOCTYPE html>
 <html lang="en">
+{% load static %}
 <head>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
-    <title>Title</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>About</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-<p>about</p>
+    <header>
+    <div class="logo"></div>
+    <nav>
+      <ul class="nav-links">
+        <li><a href="home">Home</a></li>
+        <li><a href="projetcs">Projetcs</a></li>
+        <li><a href="blogs">Blogs</a></li>
+        <li><a href="contact">Contact</a></li>
+        <li><a href="">About Me</a></li>
+      </ul>
+    </nav>
+  </header>
+  <div class = "aboutintro">
+    <h1>About Me</h1>
+    <h2>Bsc(Hons) in Information Systems , Sabaragamuwa University of Sri Lanka.<br></h2>
+    <p>I am an undergraduate at the University of Sabaragamuwa, pursuing a Bachelor of Science (Honours) in Information Systems. I completed my Advanced Level examinations in the Mathematics stream, earning three C grades. Throughout my studies, I have been enhancing my skills in programming, machine learning which have provided a strong foundation for a career in technology.  
+    </p>
+
+    <h2>Worked at Srilankan Airlines</h2>
+    <p>I gained professional experience working at SriLankan Airlines for seven months, where I operated in a fast-paced, customer-focused environment. This experience helped me develop valuable skills in communication, teamwork, and problem-solving, contributing to both my personal and professional growth.
+    </p>
+
+    <h2>Completed AL/OL in Kingswood College,Kandy.</h2>
+    <p>I completed my Ordinary Level and Advanced Level education at Kingswood College, Kandy. My time there allowed me to build a solid academic foundation while cultivating discipline, critical thinking, and a lifelong passion for learning that continues to guide my higher education and career goals.
+
+  </div>
 </body>
 </html>
