--- a/templates/home.html
+++ b/templates/home.html
@@ -28,7 +28,7 @@
       <section id="home">
         <img src="{% static 'images/dp.jpg' %}" alt="Yuthila Banuka" class="profile-image">
         <h1 class="intro-text">Hey, I'm Yuthila Banuka</h1>
-        <p class="intro-subtitle">AI Enthusiast  |  AI Automation </p>
+        <p class="intro-subtitle">AI and ML Enthusiast  |  AI Automation </p>
     </section>
 
 
@@ -58,11 +58,11 @@
         <div class="section-container">
             <h2 class="section-title">About</h2>
             <div class="about-content">
-                <h2>Undergraduate at University Of Sabaragamuwa University.</h2>
-                <p>I am an undergraduate at the University of Sabaragamuwa, pursuing a Bachelor of Science (Honours) in Information Systems. I completed my Advanced Level examinations in the Mathematics stream, earning three C grades. Throughout my studies, I have been enhancing my skills in programming, machine learning which have provided a strong foundation for a career in technology.</p>
+                <h2>BSC(Hons) Information Sytems.</h2>
+                <p>I am an undergraduate at the University of Sabaragamuwa, pursuing a Bachelor of Science (Honours) in Information Systems. I completed my Advanced Level examinations in the Mathematics stream, earning three C grades.</p>
                 
                 <h2>Worked at Srilankan Airlines.</h2>
-                <p>I gained professional experience working at SriLankan Airlines for seven months, where I operated in a fast-paced, customer-focused environment. This experience helped me develop valuable skills in communication, teamwork, and problem-solving, contributing to both my personal and professional growth.</p>
+                <p>I gained professional experience working at SriLankan Airlines for seven months, where I operated in a fast-paced, customer-focused environment. </p>
                 
                 <h2>Completed AL / OL in Kingswood College,Kandy.</h2>
                 <p>I completed my Ordinary Level and Advanced Level education at Kingswood College, Kandy. My time there allowed me to build a solid academic foundation while cultivating discipline, critical thinking, and a lifelong passion for learning that continues to guide my higher education and career goals.</p>
