--- a/templates/home.html
+++ b/templates/home.html
@@ -26,7 +26,7 @@
     </nav>
 
       <section id="home">
-        <img src="{% static 'images/dp.jpg' %}" alt="Yuthila Banuka" class="profile-image">
+        <img src="{% static 'images/dp2.jpg' %}" alt="Yuthila Banuka" class="profile-image">
         <h1 class="intro-text">Hey, I'm Yuthila Banuka</h1>
         <p class="intro-subtitle">AI and ML Enthusiast  |  AI Automation </p>
     </section>
