--- a/templates/home.html
+++ b/templates/home.html
@@ -1,5 +1,6 @@
-<!DOCTYPE html>
 {% load static %}
+<!DOCTYPE html>
+
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -9,10 +10,7 @@
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
 </head>
 <body>
-    <!-- Scroll Progress Indicator -->
-    <div class="scroll-indicator">
-        <div class="scroll-progress" id="scrollProgress"></div>
-    </div>
+
 
     <!-- Navigation -->
     <nav>
@@ -25,10 +23,13 @@
         </ul>
     </nav>
 
+
+    <!-- Home Section -->
+
       <section id="home">
         <img src="{% static 'images/dp2.jpg' %}" alt="Yuthila Banuka" class="profile-image">
         <h1 class="intro-text">Hey, I'm Yuthila Banuka</h1>
-        <p class="intro-subtitle">AI and ML Enthusiast  |  AI Automation </p>
+        <p class="intro-subtitle">AI & ML Enthusiast  |  AI Automation </p>
     </section>
 
 
@@ -70,6 +71,8 @@
         </div>
     </section>
 
+
+
     <!-- Blogs Section -->
     <section id="blogs">
         <div class="section-container">
@@ -82,6 +85,8 @@
         </div>
     </section>
 
+
+    
     <!-- Contact Section -->
     <section id="contact">
         <div class="section-container">
