--- a/templates/home.html
+++ b/templates/home.html
@@ -27,9 +27,13 @@
     <!-- Home Section -->
 
       <section id="home">
-        <img src="{% static 'images/dp2.jpg' %}" alt="Yuthila Banuka" class="profile-image">
+        <img src="{% static 'images/dp3.png' %}" alt="Yuthila Banuka" class="profile-image">
+        <div>
         <h1 class="intro-text">Hey, I'm Yuthila Banuka</h1>
+        
         <p class="intro-subtitle">AI & ML Enthusiast  |  AI Automation </p>
+        </div>
+        
     </section>
 
 
