--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10,16 +10,22 @@
             scroll-behavior: smooth;
         }
 
-        body {
-            background-color: white;
-            font-family: 'Poppins';
-            
-            color: #ffffff;
-            line-height: 1.7;
-            overflow-x: hidden;
-            margin: 0;
-            padding-top: 0;
-        }
+       body {
+    
+    font-family: 'Poppins', sans-serif;
+    
+    
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+    color: #000000; /* black text on white background */
+    line-height: 1.7;
+    overflow-x: hidden;
+    margin: 0;
+    padding-top: 0;
+    
+}
+
 
         /* Navigation */
         nav {
@@ -96,10 +102,11 @@
         }
 
         .profile-image {
-            width: 400px;
-            height: 400px;
+            width: 30%;
+            height: 30%;
             animation: slideInLeft 1.2s ease-out forwards;
             opacity: 0; 
+            border-radius: 24rem;
             
             
         }
@@ -119,6 +126,7 @@
             margin-bottom: 10px;
             opacity: 0;
             animation: fadeInUp 1.2s ease-out 0.3s forwards;
+            
         }
 
         .arrow{
