--- a/templates/home.html
+++ b/templates/home.html
@@ -14,19 +14,20 @@
 
     <!-- Navigation -->
     <nav>
-        <ul class="nav-links">
-            <li><a href="#home" class="nav-link">Home</a></li>
-            <li><a href="#about" class="nav-link">About</a></li>
-            <li><a href="#blogs" class="nav-link">Blogs</a></li>
-            <li><a href="#contact" class="nav-link">Contact</a></li>
-        </ul>
-    </nav>
+    <ul class="nav-links">
+        <li><a href="{% url 'home' %}" class="nav-link">Home</a></li>
+        <li><a href="{% url 'about' %}" class="nav-link">About</a></li>
+        <li><a href="{% url 'blogs' %}" class="nav-link">Blogs</a></li>
+        <li><a href="{% url 'contact' %}" class="nav-link">Contact</a></li>
+    </ul>
+</nav>
+
 
 
     <!-- Home Section -->
 
       <section id="home">
-        <img src="{% static 'images/dp3.png' %}" alt="Yuthila Banuka" class="profile-image">
+        <img src="{% static 'images/dp5.png' %}" alt="Yuthila Banuka" class="profile-image">
         <div>
         <h1 class="intro-text">Hey, I'm Yuthila Banuka</h1>
         
