--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -11,8 +11,8 @@
         }
 
        body {
-    
-    font-family: 'Poppins', sans-serif;
+        margin: 0;
+        font-family: 'Poppins', sans-serif;
     
     
     background-size: cover;
@@ -254,20 +254,28 @@ animation: fadeInUp 1.2s ease-out 0.3s forwards;
 
         /* About Section */
         #about {
-            background: rgba(15, 20, 25, 0.5);
+            background: rgb(255, 255, 255);
+            padding-top: 40px;
+            padding-bottom: 40px;
         }
 
         .about-content {
-            text-align: center;
-            font-size: 1.3rem;
-            line-height: 2;
-            color: #b8bcc8;
-            max-width: 800px;
-            margin: 0 auto;
+            font-size: 1.2rem;
+            line-height: 1.8;
+            color: #000000;
+            max-width: 100%;
+            margin-top: 0;
+            text-align: left;
+            animation: fadeInUp 1.2s ease-out;
         }
-
-        .about-content p {
-            margin-bottom: 30px;
+        .about-content ul {
+            list-style-type: disc;
+            margin-left: 20px;
+            margin-bottom: 20px;
+        }
+        .about-content li {
+            margin-bottom: 10px;
+            font-weight: 500;
         }
 
         /* Blogs Section */
@@ -432,6 +440,7 @@ animation: fadeInUp 1.2s ease-out 0.3s forwards;
 
             .section-title {
                 font-size: 2.8rem;
+        
             }
 
             .projects-grid {
